--- a/style.css
+++ b/style.css
@@ -86,51 +86,42 @@ section ul li{
     height: 300px;
 }
 
-form,p,span{
-    margin:0;
-    padding:0;
-}
+  .members-count,
+  .members-list,
+  .messages {
+    border: 1px solid #e4e4e4;
+    padding: 15px;
+    margin-bottom: 15px;
+    background-color: rgb(218, 120, 120);
+  }
 
-input{
-    font:12px arial;
-}
-
-a{
-    color:#0000FF;
-    text-decoration:none;
-}
-
-a:hover{text-decoration: underline;}
-
-#wrapper{
-    margin: 0 auto;
-    padding-bottom:25px;
-    background: #ebf4fb;
-    width:700px;
-    border:1px solid #ACD8F0;}
-
-#chatbox{
-    text-align:left;
-    margin:0 auto;
-    margin-bottom:25px;
-    padding:10px;
-    background:#fff;
-    height:270px;
-    width:580px;
-    border:1px solid #ACD8F0;
+  .messages {
+    flex-shrink: 1;
     overflow: auto;
-}
+  }
 
-#textbox{
-width:395px;
-border:1px solid #ACD8F0;
-}
+  .message {
+    padding: 5px 0;
+  }
+  .message .member {
+    display: inline-block;
+  }
 
-#submitbox{
-width:60px;
-}
-#menu{padding: 12.5px 25px 12.5px 25px;}
-.welcome{float: left;}
+  .member {
+    padding-right: 10px;
+    position: relative;
+  }
 
-
-
+  .message-form {
+    display: flex;
+    flex-shrink: 0;
+  }
+  .message-form__input {
+    flex-grow: 1;
+    border: 1px solid #dfdfdf;
+    padding: 10px 15px;
+    font-size: 16px;
+  }
+  .message-form__button {
+    margin: 10px;
+  }
