--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ section ul li{
     border: 1px solid #e4e4e4;
     padding: 15px;
     margin-bottom: 15px;
-    background-color: rgb(218, 120, 120);
+    background-color: #e9c1c1;
   }
 
   .messages {
